# portfolio-website

./: .gitignore  Cargo.toml  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
.github/workflows/: auto-deploy.yml  ci-cd.yml  test-backend.yml  test-frontend.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerrun.aws.json
backend/src/: lib.rs  main.rs
backend/src/entities/: missions.rs  mod.rs  prelude.rs  users.rs
backend/src/routes/: guards.rs  hello_server.rs  missions.rs  mod.rs  users.rs
backend/src/utils/: jwt.rs  mod.rs
backend/tests/: backend_test.rs
common/src/: lib.rs
database/: init.sql
frontend/: .dockerignore  Cargo.toml  Dockerfile  Dockerrun.aws.json  Trunk.toml  config.json  index.html  nginx.conf
frontend/src/: lib.rs  main.rs  router.rs  styles.rs
frontend/src/components/: mod.rs  types.rs
frontend/src/components/atoms/: custom_button.rs  mod.rs  text_input.rs
frontend/src/components/molecules/: auth_buttons.rs  link_button.rs  login_form.rs  mod.rs  nav_bar.rs
frontend/src/components/organisms/: about_me.rs  about_projects.rs  about_site.rs  ello.rs  funder.rs  hello_server.rs  home.rs  login.rs  mod.rs  signup.rs  stargaze.rs
frontend/src/components/organisms/stylesheets/: ello.css  funder.css  home.css  login.css  signup.css  stargaze.css  styles.css
frontend/src/components/pages/: about_me.rs  about_projects.rs  about_site.rs  build_mission.rs  delete_mission.rs  display_error.rs  ello.rs  funder.rs  home.rs  inspect_mission.rs  login.rs  missions.rs  mod.rs  novamesh.rs  signup.rs  stargaze.rs  tech_stack.rs
frontend/src/components/pages/stylesheets/: styles.css
frontend/src/components/subcomponents/: contact_footer.rs  mod.rs  nav_bar.rs
frontend/src/pages/: ello.rs  funder.rs  home.rs  mod.rs  stargaze.rs
frontend/src/pages/stylesheets/: home.css
frontend/src/stores/: auth_store.rs  build_store.rs  mission_store.rs  mod.rs  user_store.rs
frontend/tests/: frontend_test.rs
