[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
sea-orm = {version = "^0.12.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
serde = { version = "1.0.188", features = ["derive"] }
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4.13"
