[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.20", features = ["headers", "macros"]}
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
sea-orm = {version = "^0.12.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
jsonwebtoken = "8.1.1"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
hyper = { version = "0.14.27", features = ["full"] }
tower = "0.4.13"
dotenv = "0.15.0"
bcrypt = "0.15.0"
time = ">=0.3.35"
axum-test = "13.4.1"
serde_json = "1.0"
