[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = "0.4.0"
reqwasm = "0.5.0"
stylist = { version = "0.11", features = ["yew_integration", "parser"] }
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["console"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yewdux = "0.9"
serde_json = "1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
dotenv = "0.15.0"
anyhow = "1.0.79"
